[package]
name = "proiect"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "proiect"
test = false
bench = false

[dependencies]
embassy-stm32 = { version = "0.4.0", features = ["defmt", "stm32u545re", "unstable-pac", "memory-x", "time-driver-tim4", "exti", "chrono"] }

# Embedded HAL utilities
embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }

# Synchronization primitives and data structures with async support
embassy-sync = { version = "0.7.2", features = ["defmt"] }

# Async/await executor
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "defmt"] }

# Utilities for working with futures, compatible with no_std and not using alloc
embassy-futures = "0.1.2"

# Timekeeping, delays and timeouts
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }

# USB device
# embassy-usb = { version = "0.5.1", git = "https://github.com/embassy-rs/embassy", rev = "3e8d8fe", features = ["defmt"] }

# Defmt support
defmt = "1.0.1"
defmt-rtt = "1.1.0"

# Low level access to Cortex-M processors
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }

# Boostrap crate for Cortex-M Processors
cortex-m-rt = "0.7.5"

# Panic handler that exits `probe-run` with an error code
panic-probe = { version = "1.0.0", features = ["print-defmt"] }